--- a/SPNet/pom.xml
+++ b/SPNet/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>SNet</artifactId>
+    <artifactId>SPNet</artifactId>
 
     <dependencies>
         <dependency>
