--- a/SPNet/pom.xml
+++ b/SPNet/pom.xml
@@ -102,6 +102,14 @@
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
