--- a/tools/db2dao/tool/dao.properties
+++ b/tools/db2dao/tool/dao.properties
@@ -1,5 +1,5 @@
-userName=ddt
-password=ddt#123
+userName=
+password=
 url=jdbc\:mysql\://172.16.2.199\:2433
 entitySuffix=t_s\:Bean\:bean,t_u\:Info\:entity,t_p\:Info\:entity
 dao_interfacePackage=com.road.common.dao
